# packages/5e-database/src/2014/schemas/5e-SRD-Rules.ts
@@ -4,7 +4,8 @@ import { APIReferenceSchema } from '../../schemas/common';
 export const RuleSchema = z.strictObject({
   index: z.string(),
   name: z.string(),
-  desc: z.string(),
-  subsections: z.array(APIReferenceSchema),
+  desc: z.string().optional(),
+  parent: APIReferenceSchema.optional(),
+  children: z.array(APIReferenceSchema).optional(),
   url: z.string(),
 });
